improve camera to work on firefox too and stop camera when it must be done

--- a/src/styles/NewPost.scss
+++ b/src/styles/NewPost.scss
@@ -29,12 +29,25 @@
         @media #{$medium-and-up} { 
             height: calc(100vh - 64px - 10px); // nav bar and padding
         }
-        .video-container {
+        .video-container, .picture-container {
             position: relative;
             height: 100%;
-            video {
-                width: 100%;
-                height: auto;
+            width: 100%;
+            text-align: center;
+            video, canvas, img {
+                height: 210px;
+                width: 280px;
+                @media #{$large-and-up} {
+                    height: 480px;
+                    width: 640px;
+                }
+                @media #{$medium-only} {
+                    height: 345px;
+                    width: 460px;
+                }
+            }
+            canvas {
+                display: none;
             }
         }
         .buttons-actions {
@@ -53,16 +66,7 @@
             bottom: 95px;
             img {
                 width: 100px;
-                height: auto;
-            }
-        }
-        .picture-container {
-            height: 100%;
-            text-align: center;
-            position: relative;
-            img {
-                width: 80%;
-                height: auto;
+                height: 75px;
             }
         }
         .user-avatar {
